--- a/src/Components/Puzzles/Puzzles.css
+++ b/src/Components/Puzzles/Puzzles.css
@@ -1,23 +1,58 @@
+body {
+  background: url("../../assets/images/temno-chernye-kvadraty.png") left top repeat; }
+
+.btn-start {
+  margin-top: 20%;
+  margin-left: 36.5%;
+  border: 1px solid red;
+  padding: 7px 105px;
+  font-size: 45px;
+  background-color: black;
+  color: red;
+  font-weight: bold;
+  font-style: italic; }
+  .btn-start:hover {
+    transition: 2s;
+    background-color: #222; }
+
 .Puzzles {
-  width: 40%;
+  width: 60%;
+  height: 95%;
+  position: fixed;
+  top: 0;
+  left: 20%;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  overflow: auto; }
   .Puzzles .Puzzles-board {
     width: 25%; }
     .Puzzles .Puzzles-board .Puzzles-board-puzzle, .Puzzles .Puzzles-board .Puzzles-board-puzzle_empty {
-      height: 100px;
+      height: 150px;
       background-color: red;
       border: 1px solid white;
       margin: 1px; }
       .Puzzles .Puzzles-board .Puzzles-board-puzzle .Puzzles-board-puzzle_text, .Puzzles .Puzzles-board .Puzzles-board-puzzle_empty .Puzzles-board-puzzle_text {
         display: flex;
         justify-content: center;
-        margin-top: 19%;
+        margin-top: 20%;
         font-size: 27px;
-        font-weight: bold; }
+        font-weight: bold;
+        text-shadow: 1px 1px 1px black; }
     .Puzzles .Puzzles-board .Puzzles-board-puzzle_empty {
-      background-color: purple; }
+      background-color: black; }
       .Puzzles .Puzzles-board .Puzzles-board-puzzle_empty span {
         color: purple; }
+  .Puzzles .Puzzles-btn_check {
+    margin-top: 9%;
+    margin-left: 37.5%;
+    border: 1px solid red;
+    padding: 7px 70px;
+    font-size: 35px;
+    background-color: black;
+    color: red;
+    font-weight: bold;
+    font-style: italic; }
 
 /*# sourceMappingURL=Puzzles.css.map */
