--- a/src/Components/Puzzles/Puzzles.scss
+++ b/src/Components/Puzzles/Puzzles.scss
@@ -1,28 +1,66 @@
+body {
+  background: url("../../assets/images/temno-chernye-kvadraty.png") left top repeat;
+}
+.btn-start{
+  margin-top: 20%;
+  margin-left: 36.5%;
+  border: 1px solid red;
+  padding: 7px 105px;
+  font-size: 45px;
+  background-color: black;
+  color:red;
+  font-weight: bold;
+  font-style: italic;
+    &:hover{
+      transition: 2s;
+      background-color: #222;
+    }
+}
+
 .Puzzles{
-  width: 40%;
+  width: 60%;
+  height: 95%;
+  position: fixed;
+  top: 0;
+  left: 20%;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  overflow: auto;
   .Puzzles-board {
     width: 25%;
     .Puzzles-board-puzzle{
-      height: 100px;
+      height: 150px;
       background-color: red;
       border:1px solid white;
       margin: 1px;
       .Puzzles-board-puzzle_text{
         display: flex;
         justify-content: center;
-        margin-top: 19%;
+        margin-top: 20%;
         font-size: 27px;
         font-weight: bold;
+        text-shadow: 1px 1px 1px black;
       }
     }
     .Puzzles-board-puzzle_empty{
       @extend .Puzzles-board-puzzle;
-      background-color: purple;
+      background-color: black;
         span{
           color:purple;
         }
     }
+  }
+  .Puzzles-btn_check{
+    margin-top: 9%;
+    margin-left: 37.5%;
+    border: 1px solid red;
+    padding: 7px 70px;
+    font-size: 35px;
+    background-color: black;
+    color:red;
+    font-weight: bold;
+    font-style: italic;
   }
 }
