--- a/src/Components/Puzzles/Puzzles.scss
+++ b/src/Components/Puzzles/Puzzles.scss
@@ -19,7 +19,7 @@ body {
 
 .Puzzles{
   width: 60%;
-  height: 95%;
+  height: 97%;
   position: fixed;
   top: 0;
   left: 20%;
@@ -32,7 +32,7 @@ body {
     width: 25%;
     .Puzzles-board-puzzle{
       height: 150px;
-      background-color: red;
+      background-color: rgba(red,0.8);
       border:1px solid white;
       margin: 1px;
       .Puzzles-board-puzzle_text{
