--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -129,4 +129,4 @@ body {
         transition: 3s;
         background-color: #222222; }
 
-/*# sourceMappingURL=Puzzles.css.map */
+/*# sourceMappingURL=Game.css.map */
